# IdTech4-Remaster

./: .clang-format  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  build.bat  configure.bat  generate_project.bat  setup_ev.bat  vcpkg.json
Documentation/: DOOM3_ENGINE_MODERNIZATION_ROADMAP.md  DirectOpenGLCallInventory.md  DirectWin32CallInventory.md  ENGINE_ARCHITECTURE_STATIC_ANALYSIS.md  GlobalSingletonInventory.md  NetworkSerializationEntryPoints.md  POINTER_64BIT_MIGRATION_REPORT.md  RawOwnershipInventory.md  RendererCommandStructInventory.md  SavegameSerializationEntryPoints.md
base/: doomkey  xpkey
cmake/: Doxyfile.in  IdTech4AnalyzeBinarySize.cmake  IdTech4BinarySize.cmake  IdTech4BuildPerformance.cmake  IdTech4CPack.cmake  IdTech4CollectGcov.cmake  IdTech4CollectLlvmCov.cmake  IdTech4Compiler.cmake  IdTech4Config.cmake.in  IdTech4Coverage.cmake  IdTech4Dependencies.cmake  IdTech4Documentation.cmake  IdTech4Formatting.cmake  IdTech4GenerateBuildDocs.cmake  IdTech4GenerateDocsSite.cmake  IdTech4Install.cmake  IdTech4Packaging.cmake  IdTech4RunCMakeFormat.cmake  IdTech4RunCMakeLint.cmake  IdTech4RunClangFormat.cmake  IdTech4Sanitizers.cmake  IdTech4StaticAnalysis.cmake  IdTech4Targets.cmake  IdTech4Testing.cmake  IdTech4VerifyArtifact.cmake  IdTech4Version.cmake  IdTech4WritePackageManifest.cmake
neo/: MayaImport.vcxproj  _Common.props  _Debug.props  _DoomDLL.props  _Game-d3xp.props  _Game.props  _Release.props  curllib.vcxproj  doom.sln  doomdll.vcxproj  game.vcxproj  (+3 more)
tests/package/downstream/: CMakeLists.txt
(+265 files in other folders)
